--- a/package.json
+++ b/package.json
@@ -4,29 +4,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-elements": "^0.19.1"
+    "react-native-elements": "^1.1.0",
+    "react-native-google-places": "^2.5.2",
+    "react-native-google-places-autocomplete": "^1.3.9",
+    "react-navigation": "^3.0.9"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "jest-expo": "^32.0.0"
   },
-  "private": true,
-  "name": "trippit-rn",
-  "description": "",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/oshoubber/Trippit-RN.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/oshoubber/Trippit-RN/issues"
-  },
-  "homepage": "https://github.com/oshoubber/Trippit-RN#readme"
+  "private": true
 }
