--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules/**/*
 .expo/*
 !node_modules/react-native-foursquare-api/lib/api/*
+!node_modules/react-native-google-matrix/dist/index.common.js
 npm-debug.*
 *.jks
 *.p12
