--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
-    "google-distance-matrix": "^1.1.1",
     "qs-google-signature": "^1.2.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-crypto": "^2.1.2",
     "react-native-elements": "^1.1.0",
     "react-native-foursquare-api": "0.0.4",
-    "react-native-google-matrix": "file:react-native-google-matrix",
+    "react-native-google-matrix": "0.0.3",
     "react-native-google-places": "^2.5.2",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-navigation": "^3.0.9",
