--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-crypto": "^2.1.2",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-elements": "^1.1.0",
     "react-native-foursquare-api": "0.0.4",
     "react-native-google-matrix": "0.0.3",
     "react-native-google-places": "^2.5.2",
     "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-root-toast": "^3.0.2",
+    "react-native-simple-toast": "0.0.8",
+    "react-native-smart-toast": "^1.1.1",
+    "react-native-toast-notification": "^1.1.2",
+    "react-native-whc-toast": "^1.0.0",
     "react-navigation": "^3.0.9",
     "request": "^2.88.0"
   },
