Major UI updates: fonts, lists now implements a time picker

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qs-google-signature": "^1.2.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-24h-timepicker": "^1.0.0",
     "react-native-crypto": "^2.1.2",
     "react-native-elements": "^1.1.0",
     "react-native-foursquare-api": "0.0.4",
